扩充短题答案：~200个<35行的题目补充技术原理+代码示例+注意事项
- 用 5 个并行 agent 分批处理全部答案正文<35行的文件
- 每个文件在 ## 记忆要点 前插入 2-3 个章节：
  - ## 技术原理（从 feynman.key_points 展开）
  - ## 代码示例（题目相关的代码/命令/配置）
  - ## 注意事项（从 follow_up/memory_points 提炼）
- 平均答案行数 80→91，短文件（<35行）从 200+ 降到 0
- 构建通过